<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"校园资讯"</string>
    <string name="main_information">"资讯"</string>
    <string name="back">"返回"</string>
    <string name="send">"发送"</string>
    <string name="cancel">"取消"</string>
    <string name="new_sms">"新建资讯"</string>
    <string name="sendto">"收件人:"</string>
    <string name="main_title_information">"资讯"</string>
    <string name="main_title_back">返回</string>
    <string name="picture_browse">图片浏览</string>
    <string name="save_to_local">保存到手机</string>
    <string name="browse">预览</string>
    <string name="delete">删除</string>
    <string name="there_are">有</string>
    <string name="picture_send_failed">张图片发送失败！</string>
    <string name="send_a_message_to_you">发来1条消息.</string>
    <string name="you_receive_a_message">您收到一条消息.</string>
    <string name="picture">[图片]</string>
    <string name="please_select_a_contacts">请选择联系人</string>
    <string name="total">(共</string>
    <string name="people">人)</string>
    <string name="contacts">个联系人</string>
    <string name="to_send">发送了</string>
    <string name="messages">条消息</string>
    <string name="to_you">给你。</string>
    <string name="server_ip_port">Server</string>
    <string name="cloud_ip_port">Cloud</string>
    <string name="error_ip_port_format">错误的IP或端口格式!</string>


    <!-- Dialog -->
	<string name="wait">请稍等...</string>
	
    <!-- School contact -->
    <string name="patriarch">家长</string>
    <string name="patriarch:">家长:</string>
    <string name="patriarchinfo">家长资料</string>
    <string name="school">学校</string>
    <string name="submit">确定</string>
    <string name="contactsdetail">详细资料</string>
    <string name="mobile">手机：</string>
    <string name="telephone">固定电话：</string>
    <string name="email">电子邮箱：</string>
    <string name="qq">QQ：</string>
    <string name="post">职位：</string>
    <string name="send_message">发消息</string>

    <!-- Edit message -->
    <string name="title">标题：</string>
    <string name="content">内容:</string>
    <string name="part">(部分)</string>
    <string name="all">全部</string>
    <string name="teacher">老师</string>
    <string name="parents">家长</string>
    <string name="student">学生</string>
    <string name="tips_add_contact">"请添加联系人！"</string>

    <!-- Detail message -->
    <string name="detail_information">资讯详细</string>
    <string name="input_comment">输入评论：（200字内）</string>
    <string name="comment">评论</string>
    <string name="more_comment">更多评论</string>

    <!-- PullToRefreshListView -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- Toast message -->
    <string name="failed_to_send">发送失败!</string>
    <string name="send_successful">发送成功!</string>
    <string name="open_camera_failed">打开照相机失败!</string>
    <string name="Network_anomaly">网络连接异常!</string>
    <string name="IO_exception">网络连接异常!</string>
    <string name="SID_exception">会话超时，请重新登录!</string>
    <string name="server_exception">服务器异常!</string>
    <string name="data_exception">通讯数据包异常!</string>
    <string name="other_exception">未知异常!</string>
    <string name="decode_data_exception">解析数据包异常!</string>
    <string name="tips_add_content">请添加资讯内容!</string>
    <string name="tips_add_title">请添加资讯标题!</string>
    <string name="tips_add_comment">请编辑评论!</string>
</resources>