<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_popupwindow"
    android:orientation="vertical" >
    <Button
        android:id="@+id/spinner_btn_all"
        style="@style/btn_of_option"
        android:textColor="@color/black_shallow"
        android:background="@drawable/spinner_item_selector"
        android:text="@string/all" />

    <Button
        android:id="@+id/spinner_btn_teacher"
        style="@style/btn_of_option"
        android:textColor="@color/black_shallow"
        android:background="@drawable/spinner_item_selector"
        android:text="@string/teacher" />
    
     <Button
        android:id="@+id/spinner_btn_student"
        style="@style/btn_of_option"
        android:textColor="@color/black_shallow"
        android:background="@drawable/spinner_item_selector"
        android:text="@string/student" />

    <Button
        android:id="@+id/spinner_btn_parents"
        style="@style/btn_of_option"
        android:textColor="@color/black_shallow"
        android:background="@drawable/spinner_item_selector2"
        android:text="@string/parents" />

</LinearLayout>
