<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/main_layout_school_contacts_topbar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/main_top_bg" >

        <Button
            android:id="@+id/school_contacts_topbar_btn_back"
            style="@style/btn_of_head"
            android:layout_alignParentLeft="true"
            android:background="@drawable/sns_backbtn_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/school"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/school_contacts_topbar_btn_submit"
            style="@style/btn_of_head"
            android:layout_alignParentRight="true"
            android:background="@drawable/sns_btn_submit_selector"
            android:text="@string/submit"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/school_contacts_rl_search_zone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_contact_item_bg" >

        <Button
            android:id="@+id/school_contacts_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
        	android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/all"
            android:textSize="16sp"
            android:textColor="@color/black_shallow"
            android:background="@drawable/sns_school_contact_spinner_selector" />

        <include
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/school_contacts_spinner"
            layout="@layout/sns_search_contact_layout" />
    </RelativeLayout>

    <!--
     <ListView
	    android:id="@+id/mygroup_listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:cacheColorHint="@color/transparent"
        android:layout_marginTop="0dip"
        android:fadingEdge="none"
        android:scrollingCache="false"
        android:visibility="gone"
        android:divider="@null"

    -->

    <ListView
        android:id="@+id/mycontacts_listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="0dip"
        android:cacheColorHint="@color/transparent"
        android:divider="@null"
        android:fadingEdge="none" />

</LinearLayout>