<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <RelativeLayout
        android:id="@+id/detail_msg_topbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/main_top_bg" >

        <Button
            android:id="@+id/detail_msg_topbar_back"
            style="@style/btn_of_head"
            android:layout_alignParentLeft="true"
            android:background="@drawable/sns_backbtn_bg" />

        <TextView
            android:id="@+id/detail_msg_topbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/detail_information"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/detail_msg_rl_edit_comment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp" >

        <Button
            android:id="@+id/detail_msg_btn_send_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/sns_btn_submit_selector"
            android:text="@string/send"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/detail_msg_et_edit_comment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/detail_msg_btn_send_comment"
            android:background="@drawable/main_edit_bg"
            android:hint="@string/input_comment"
            android:maxLength="200" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/detail_msg_sv_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/detail_msg_rl_edit_comment"
        android:layout_below="@id/detail_msg_topbar"
        android:layout_margin="10dp"
        android:fadingEdge="none"
        android:fillViewport="true"
        android:scrollbars="none" >

        <RelativeLayout
            android:id="@+id/detail_msg_rl_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/detail_msg_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/detail_msg_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_msg_title"
                android:layout_marginTop="10dp"
                android:textColor="@color/black_shallow"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/detail_msg_sender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/detail_msg_time"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/detail_msg_time"
                android:textColor="@color/black_shallow"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/detail_msg_iv_divider"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@id/detail_msg_time"
                android:layout_marginTop="10dp"
                android:background="@drawable/divider_line" />

            <com.biznest.campusinformation.util.MyImageView
                android:id="@+id/detail_msg_iv_img1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_msg_iv_divider"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/friends_sends_pictures_no"
                android:visibility="gone" />

            <com.biznest.campusinformation.util.MyImageView
                android:id="@+id/detail_msg_iv_img2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_msg_iv_img1"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/friends_sends_pictures_no"
                android:visibility="gone" />

            <com.biznest.campusinformation.util.MyImageView
                android:id="@+id/detail_msg_iv_img3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_msg_iv_img2"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/friends_sends_pictures_no"
                android:visibility="gone" />

            <TextView
                android:id="@+id/detail_msg_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_msg_iv_img3"
                android:layout_marginTop="10dp"
                android:textColor="@color/black_text"
                android:textSize="16sp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/detail_msg_iv_divider2"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@id/detail_msg_text"
                android:layout_marginTop="10dp"
                android:background="@drawable/divider_line" />

            <RelativeLayout
                android:id="@+id/detail_msg_rl_comment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_msg_iv_divider2"
                android:layout_marginTop="10dp"
                android:background="@color/background" >

                <TextView
                    android:id="@+id/detail_msg_tv_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment"
                    android:textColor="@color/black_shallow"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/detail_msg_tv_comment_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/detail_msg_tv_comment"
                    android:textColor="@color/black_shallow"
                    android:textSize="12sp" />

              <!--   <RelativeLayout
                    android:id="@+id/detail_msg_rl_showcomment"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_below="@id/detail_msg_tv_comment" > -->

                    <com.biznest.campusinformation.util.PullToRefreshListView2
                        android:id="@+id/detail_msg_lv_comment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/detail_msg_tv_comment"
                        android:cacheColorHint="@color/transparent"
                        android:divider="@null"
                        android:fadingEdge="none"
                        android:fastScrollEnabled="true"
                        android:focusable="false"
                        android:scrollbars="none" />
               <!--  </RelativeLayout> -->
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>